fixing margins on past checkin form

--- a/app/assets/stylesheets/new_checkin_form.css.scss
+++ b/app/assets/stylesheets/new_checkin_form.css.scss
@@ -49,8 +49,12 @@
     width: 90%;
     text-align: center;
     border: none;
+    margin-bottom: 20px;
   }
 
+  .past_checkin_form {
+    margin-top: 40px;
+    }
 }
 
 #searchCategory {
