mainly fixes divs on checkin page minus media image

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,8 +17,8 @@
         = render 'layouts/navbar'
 
       .content
-        .logo
-          = image_tag "Ehxe_logo.png", id: "logo"
+        -# .logo
+        -#   = image_tag "Ehxe_logo.png", id: "logo"
         = yield
 
 
