--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -6,11 +6,12 @@
   .navbar {
     position: absolute;
     right: 0;
-    width: 10%;
+    width: 0%;
     height: 100%;
     border: 1px solid black;
     background: black;
     color: white;
+
 
     a {
       color: white;
@@ -31,10 +32,10 @@
   .content {
     position: absolute;
     left: 0;
-    width: 90%;
+    width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: #777;
+    background-color: #bbb;
     // background: rgb(238,238,238); /* Old browsers */
     // background: -moz-linear-gradient(top,  rgba(238,238,238,1) 0%, rgba(204,204,204,1) 100%); /* FF3.6+ */
     // background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(238,238,238,1)), color-stop(100%,rgba(204,204,204,1))); /* Chrome,Safari4+ */
