--- a/app/assets/stylesheets/new_checkin_form.css.scss
+++ b/app/assets/stylesheets/new_checkin_form.css.scss
@@ -4,32 +4,32 @@
   clear: both;
 }
 
+#new_checkin {
+  width: 50%;
+}
+
 .new_checkin,
 .past_checkin {
-  width: 90%; height: 100%;
-  margin: 0 auto; padding: 1%;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
   text-align: center;
-  margin-top: -40px;
+  // margin-top: -40px;
   .past_checkin_form {
     display: none;
   }
 
-.new_checkin {
-    background-color: #bbb;
-    // border: 2px solid #000;
-    border-radius: 40px;
-}
-
 .checkin_form {
     margin: 20px;
+    height: 100%;
 }
 
   .checkin_form_box {
     border: 1px solid black;
-    width: 47%; height: 300px;
+    width: 50%;
+    height: 40%;
     float: left;
-    padding-left: 5px;
-    margin-bottom: 20px;
+    // margin-bottom: 20px;
   }
   .new_media {
     width: 100%;
@@ -38,22 +38,21 @@
 
   #checkin_title,
   .past_checkin_location_search {
-    width: 90%;
+    width: 100%;
     font-size: 1.3em;
     height: 30px;
-    border-radius: 20px;
-    margin: 15px;
+    // margin: 15px;
   }
 
   .past_checkin_location_search {
-    width: 90%;
+    width: 100%;
     text-align: center;
     border: none;
-    margin-bottom: 20px;
+    // margin-bottom: 20px;
   }
 
   .past_checkin_form {
-    margin-top: 40px;
+    // margin-top: 40px;
     }
 }
 
@@ -73,73 +72,87 @@
   text-align: center;
 }
 
+.map {
+  height: 30%;
+}
+
 #map,
 #past_map,
 #edit_map {
-  height: 300px;
-  width: 95%;
+  height: 100%;
+  width: 100%;
   margin: auto;
-  margin-bottom: 20px;
+  // margin-bottom: 20px;
 }
 
 .submit_button {
-  width: 95%;
+  width: 100%;
   background: black;
   color: white;
   font-family: 'Droid Sans';
   font-size: 1.3em;
   border: none;
-  border-radius: 15px;
-  margin: 10px;
-  margin-bottom: 20px;
+  // margin: 10px;
+  // margin-bottom: 20px;
 }
 
-.category_overlay, .people_overlay, .words_overlay, .add_media_overlay, #assets_image {
+.category_overlay, .people_overlay, .words_overlay, .add_media_overlay {
   background-color: #00D5E1;
   position: relative;
-  min-height: 95%;
-  max-height: 95%;
+  max-height: 100%;
   max-width: 100%;
-  border-radius: 20px;
   margin: 0;
 }
 
+#assets_image {
+  height: 75%;
+  width: 75%;
+}
+
+#category_image, #people_image, #words_image {
+  width: 50%;
+  display: block;
+  margin: auto;
+}
+
 .people_content, .category_content, .words_content, .add_media {
-  border-radius: 20px;
-  min-height: 85%;
-  min-width: 85%;
+  height: 100%;
+  width: 100%;
   display: none;
-  padding: 20px;
+  overflow: scroll;
 }
 
 .file_fields {
 padding-top: 10px;
 }
 
-.people_overlay, .people_content {
-  background-color: #FF4F5C;
+.people.checkin_form_box, .people_overlay, .people_content {
+  background-color: #D2C469;
 }
 
-.category_overlay, .category_content{
-  background-color: #00D5E1;
+.categories.checkin_form_box, .category_overlay, .category_content{
+  background-color: #998080;
 }
 
-.words_overlay , .words_content{
-  background-color: #00FFB1;
+.words.checkin_form_box, .words_overlay , .words_content{
+  background-color: #767E7F;
 }
 
-.add_media_overlay, #assets_image, .add_media {
-  background-color: #FFD200;
+.add_media.checkin_form_box, .add_media_overlay, #assets_image, .add_media {
+  background-color: #95B2BB;
 }
 
 .categories.checkin_form_box, .people.checkin_form_box, .assets.checkin_form_box, .words.checkin_form_box{
   border: none;
-  margin: 10px;
+  text-align: center;
+  margin: auto;
+  // margin: 10px;
 }
 
 #checkin_inventory {
   text-align: center;
   margin: 0 auto;
   width: 100%;
+  height: 60%;
 }
 
