--- a/app/views/checkins/_form.html.haml
+++ b/app/views/checkins/_form.html.haml
@@ -21,7 +21,7 @@
     #checkin_inventory
       .categories.checkin_form_box
         .category_overlay
-          = image_tag "https://s3-eu-west-1.amazonaws.com/ehxe/defaults/Categories.png"
+          = image_tag "https://s3-eu-west-1.amazonaws.com/ehxe/defaults/Categories.png", id: 'category_image'
         .category_content
           - if !current_user.categories.empty?
             .field
@@ -39,7 +39,7 @@
 
       .people.checkin_form_box
         .people_overlay
-          = image_tag "https://s3-eu-west-1.amazonaws.com/ehxe/defaults/People.png"
+          = image_tag "https://s3-eu-west-1.amazonaws.com/ehxe/defaults/People.png",  id: 'people_image'
         .people_content
           - if !current_user.people.empty?
             .field
@@ -61,11 +61,11 @@
           = image_tag "https://s3-eu-west-1.amazonaws.com/ehxe/defaults/assets_image.png", id: "assets_image"
         .add_media
           .file_fields
-            %a#add_media Add Media
+            %a#add_media Add Another
 
       .words.checkin_form_box
         .words_overlay
-          = image_tag "https://s3-eu-west-1.amazonaws.com/ehxe/defaults/words.png"
+          = image_tag "https://s3-eu-west-1.amazonaws.com/ehxe/defaults/words.png",  id: 'words_image'
         .words_content
           .field
             = f.fields_for :assets do |asset|
