--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,40 +1,62 @@
+.jPanelMenu-panel {
+  height: 100%;
+  width: 100%;
+}
+
 .container {
   width: 100%;
   height: 100%;
   position: relative;
 
-  .navbar {
+  #navbar {
+    display: none;
+  }
+
+  .top_bar {
+    -webkit-background-clip: border-box;
+    -webkit-background-origin: padding-box;
+    -webkit-background-size: auto;
+    background-attachment: scroll;
+    background-clip: border-box;
+    background-color: rgba(0, 0, 0, 0);
+    background-image: -webkit-linear-gradient(top, rgb(62, 62, 62), rgb(56, 56, 56));
+    background-origin: padding-box;
+    background-size: auto;
+    border-bottom-color: rgb(46, 46, 46);
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-top-color: rgb(72, 72, 72);
+    border-top-style: solid;
+    border-top-width: 1px;
+    border-bottom-color: rgb(72, 72, 72);
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    color: rgb(247, 247, 247);
+    cursor: auto;
+    display: block;
+    font-family: museo-sans, 'Museo Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+    text-shadow: rgb(34, 34, 34) 0px -1px 2px;
+    width: 225px;
+    zoom: 1;
     position: absolute;
-    right: 0;
-    width: 10%;
-    height: 100%;
-    border: 1px solid black;
-    background: black;
-    color: white;
-
-    a {
-      color: white;
-      font-size: 1.25em
-    }
-
-    .title {
-      text-align: center;
-      font-size: 2em;
-    }
-
-    .nav_link {
+    top: 0;
+    left: 0;
+    width: 100%;
+    font-size: 1.5em;
+    padding: 0.5% 0 0.8% 0;
     text-align: center;
-    margin: 10% 0 10% 0;
-    }
   }
 
   .content {
+    padding-top: 50px;
     position: absolute;
     left: 0;
-    width: 90%;
+    width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: #777;
+    background-image: url('https://s3-eu-west-1.amazonaws.com/ehxe/sandpaper.png');
     // background: rgb(238,238,238); /* Old browsers */
     // background: -moz-linear-gradient(top,  rgba(238,238,238,1) 0%, rgba(204,204,204,1) 100%); /* FF3.6+ */
     // background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(238,238,238,1)), color-stop(100%,rgba(204,204,204,1))); /* Chrome,Safari4+ */
