--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -1,23 +1,16 @@
-.title
-  EHXE
-- if current_user
-  .nav_link
-    = link_to 'Account', edit_user_path(current_user)
-  .nav_link
-    = link_to 'Logout', session_path(session), method: :delete, data: {confirm: 'Are you sure?'}
-  .nav_link
-    = link_to 'Dashboard', checkins_path
-  .nav_link
-    = link_to 'New checkin', new_checkin_path
-  .nav_link
-    = link_to 'Past Checkin', past_checkin_path
-  .nav_link
-    = link_to 'Categories', categories_path
-  .nav_link
-    = link_to 'People', people_path
-
-- else
-  .nav_link
-    = link_to 'Sign up', new_user_path
-  .nav_link
-    = link_to 'Login', sign_in_path
+%ul
+  - if current_user
+    %li= link_to 'Dash', checkins_path
+    %li{class: 'show_checkin_options'}
+      %a Checkin
+    %li{class: 'checkin_link'}
+      = link_to 'Now', new_checkin_path
+    %li{class: 'checkin_link'}
+      = link_to 'Past', past_checkin_path
+    %li= link_to 'Categories', categories_path
+    %li= link_to 'People', people_path
+    %li= link_to 'Account', edit_user_path(current_user)
+    %li= link_to 'Logout', session_path(session), method: :delete, data: {confirm: 'Are you sure?'}
+  - else
+    %li= link_to 'Sign up', new_user_path
+    %li= link_to 'Login', sign_in_path
