--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -54,7 +54,7 @@
 
  */
 
- /*.logo {
+ .logo {
   width: 100%;
   text-align: center;
  }
@@ -64,7 +64,7 @@
   margin: 0 auto;
   margin-top: -20px;
  }
-*/
+
 html, body {
   width: 100%; height: 100%;
   font-family: 'Droid Sans', sans-serif;
