--- a/app/views/checkins/_form.html.haml
+++ b/app/views/checkins/_form.html.haml
@@ -19,9 +19,22 @@
       - default_x = "https://s3-eu-west-1.amazonaws.com/ehxe/defaults/x_icon.png"
 
     #checkin_inventory
+      .words.checkin_form_box
+        .words_overlay
+          = image_tag "https://s3-eu-west-1.amazonaws.com/ehxe/defaults/words.png",  id: 'words_image'
+          %p.instructions Add Words
+        .words_content
+          .field
+            = f.fields_for :assets do |asset|
+              = asset.text_area :words
+              = asset.file_field :media, style:'display:none' #DO NOT DELETE OR FILE UPLOAD WILL NOT WORK
+              = asset.link_to_remove image_tag default_x
+            = f.link_to_add "Add Words", :assets
+
       .categories.checkin_form_box
         .category_overlay
           = image_tag "https://s3-eu-west-1.amazonaws.com/ehxe/defaults/Categories.png", id: 'category_image'
+          %p.instructions Add Categories
         .category_content
           - if !current_user.categories.empty?
             .field
@@ -37,9 +50,26 @@
               = category.link_to_remove image_tag default_x
             = f.link_to_add "New Category", :categories
 
+          .field
+            = f.fields_for :people do |person|
+              = person.label :name
+              = person.text_field :name
+              = person.link_to_remove image_tag default_x
+            = f.link_to_add "New Person", :people
+
+
+      .assets.checkin_form_box
+        .add_media_overlay
+          = image_tag "https://s3-eu-west-1.amazonaws.com/ehxe/defaults/assets_image_small.png", id: "assets_image"
+          %p.instructions Add Media
+        .add_media
+          .file_fields
+            %a#add_media Add Another
+
       .people.checkin_form_box
         .people_overlay
           = image_tag "https://s3-eu-west-1.amazonaws.com/ehxe/defaults/People.png",  id: 'people_image'
+          %p.instructions Tag People
         .people_content
           - if !current_user.people.empty?
             .field
@@ -48,31 +78,5 @@
                 = person.link_to_remove image_tag default_x
               .add_button
                 = f.link_to_add "Tag A Person", :people_checkins
-
-          .field
-            = f.fields_for :people do |person|
-              = person.label :name
-              = person.text_field :name
-              = person.link_to_remove image_tag default_x
-            = f.link_to_add "New Person", :people
-
-      .assets.checkin_form_box
-        .add_media_overlay
-          = image_tag "https://s3-eu-west-1.amazonaws.com/ehxe/defaults/assets_image.png", id: "assets_image"
-        .add_media
-          .file_fields
-            %a#add_media Add Another
-
-      .words.checkin_form_box
-        .words_overlay
-          = image_tag "https://s3-eu-west-1.amazonaws.com/ehxe/defaults/words.png",  id: 'words_image'
-        .words_content
-          .field
-            = f.fields_for :assets do |asset|
-              = asset.text_area :words
-              = asset.file_field :media, style:'display:none' #DO NOT DELETE OR FILE UPLOAD WILL NOT WORK
-              = asset.link_to_remove image_tag default_x
-            = f.link_to_add "Add Words", :assets
-
       .actions
         = f.submit 'Save', class: 'submit_button'
