asset upload div on new checkin now clicks and triggers as spec

--- a/app/views/checkins/_form.html.haml
+++ b/app/views/checkins/_form.html.haml
@@ -60,8 +60,8 @@
         .add_media_overlay
           = image_tag "https://s3-eu-west-1.amazonaws.com/ehxe/defaults/assets_image.png", id: "assets_image"
         .add_media
-          .file_fields
-            %a#add_media Add Another
+          .div_for_asset__upload_appends
+          %a#add_media Add Another
 
       .words.checkin_form_box
         .words_overlay
