--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,7 +18,7 @@
 
       .content
         .top_bar
-          = image_tag 'http://www.acceleratedtaxsolutions.com/sites/default/themes/ats/images/menu-icon.png'
+          = image_tag 'http://www.acceleratedtaxsolutions.com/sites/default/themes/ats/images/menu-icon.png', class: 'menu_icon'
           EXHE
         = yield
 
