--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -43,6 +43,13 @@
     font-size: 1.5em;
     padding: 0.5% 0 0.8% 0;
     text-align: center;
+
+    .menu_icon {
+      left: 0;
+      float: left;
+      margin-left: 1%;
+      margin-top: 0.55%;
+    }
   }
 
   .content {
