fixing assets div

--- a/app/views/checkins/_form.html.haml
+++ b/app/views/checkins/_form.html.haml
@@ -56,8 +56,8 @@
           = image_tag "https://s3-eu-west-1.amazonaws.com/ehxe/defaults/assets_image_small2.png", id: "assets_image"
           %p.instructions Media
         .add_media
-          .file_fields
-            %a#add_media Add Another
+          .div_for_asset__upload_appends
+          %a#add_media Add Another
 
       .people.checkin_form_box
         .people_overlay
