--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -2,7 +2,7 @@
   - if current_user
     %li= link_to 'Dash', checkins_path
     %li{class: 'show_checkin_options'}
-      %a Checkin
+      %a{href:''} Checkin
     %li{class: 'checkin_link'}
       = link_to 'Now', new_checkin_path
     %li{class: 'checkin_link'}
