--- a/app/views/checkins/_form.html.haml
+++ b/app/views/checkins/_form.html.haml
@@ -28,7 +28,7 @@
             = f.fields_for :assets do |asset|
               = asset.text_area :words
               = asset.file_field :media, style:'display:none' #DO NOT DELETE OR FILE UPLOAD WILL NOT WORK
-              = asset.link_to_remove image_tag default_x
+              = asset.link_to_remove "Remove Words"
             = f.link_to_add "Add Words", :assets, id: "add_words_link"
 
       .categories.checkin_form_box
