--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -12,6 +12,55 @@
     display: none;
   }
 
+.search_box {
+  text-align: center;
+  // height: 8%;
+  // display: inline;
+}
+
+.select_search_div {
+  width: 20%;
+  float: left;
+  margin-top: 4px;
+  text-align: center;
+}
+
+.search_input_div {
+  width: 80%;
+  float: left;
+  margin-top: 4px;
+}
+
+#searchCategory {
+  -webkit-appearance: none;
+  border: none;
+  background: none;
+  font-size: 1.3em;
+  height: 30px;
+  width: 97%;
+  margin-left: 3%;
+  background-color: #767E7F;
+  border-radius: 0;
+  text-align: center;
+}
+
+#searchQuery {
+  width: 98%;
+  font-size: 1.3em;
+  height: 30px;
+  // height: 100%;
+  border: none;
+  text-align: center;
+  padding: 0;
+  margin: 0 1%;
+}
+
+
+.map_dash {
+  width: 100%;
+  height: 60%;
+}
+
   .top_bar {
     -webkit-background-clip: border-box;
     -webkit-background-origin: padding-box;
@@ -64,7 +113,7 @@
 
   .errors {
     font-size: 1em;
-    width: 90%;
+    width: 100%;
     border: 2px solid red;
     border-radius: 5px;
     margin: 0 auto;
