--- a/app/assets/stylesheets/timeline.css.scss
+++ b/app/assets/stylesheets/timeline.css.scss
@@ -1,7 +1,8 @@
-.holder {
-  display: inline;
-  width: 90%;
-  position: relative;
+.timelinecontainer {
+  height: 20%;
+  position: absolute;
+  bottom: 50;
+  // overflow: hidden;
 }
 
 #timeline {
@@ -24,3 +25,53 @@
 .checkin_category {
   float: left;
 }
+
+#centernav {
+    margin: auto;
+}
+
+// TIMELINE HOLDER
+.holder {
+
+  position: absolute;
+  bottom: 0;
+  height: 200px;
+  display: inline;
+  width: 100%;
+  // position: relative;
+  margin: auto;
+}
+
+.holder a {
+    display:inline-block;
+    cursor:pointer;
+    margin:0 5px;
+    padding:4px;
+    border-radius:50%;
+    background-color:#D4EE5E;
+}
+.holder a:hover {
+    background-color:#222;
+    color:#fff;
+}
+.holder a.jp-previous {
+    margin-right:15px;
+}
+.holder a.jp-next {
+    margin-left:15px;
+}
+.holder a.jp-current,a.jp-current:hover {
+    color:#FF4242;
+    font-weight:bold;
+}
+.holder a.jp-disabled,a.jp-disabled:hover {
+    color:#bbb;
+}
+.holder a.jp-current,a.jp-current:hover,.holder a.jp-disabled,a.jp-disabled:hover {
+    cursor:default;
+    background-color:#FF4242;
+}
+.holder span {
+    margin: 0 5px;
+}
+
