--- a/app/views/checkins/_form.html.haml
+++ b/app/views/checkins/_form.html.haml
@@ -80,4 +80,4 @@
             = f.link_to_add "New Person", :people
 
       .actions
-        = f.submit 'Save', class: 'submit_button'
+        = f.submit 'CHECKIN', class: 'submit_button'
