--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -14,15 +14,19 @@
 
 .search_box {
   text-align: center;
-  // height: 8%;
+  height: 5%;
+  min-height: 30px;
   // display: inline;
 }
 
 .select_search_div {
-  width: 20%;
+  width: 19%;
   float: left;
   margin-top: 4px;
+  margin-left: 1%;
   text-align: center;
+  background-color: #767E7F;
+  color: white;
 }
 
 .search_input_div {
@@ -37,9 +41,9 @@
   background: none;
   font-size: 1.3em;
   height: 30px;
-  width: 97%;
+  // width: 97%;
   margin-left: 3%;
-  background-color: #767E7F;
+  color: white;
   border-radius: 0;
   text-align: center;
 }
@@ -58,7 +62,7 @@
 
 .map_dash {
   width: 100%;
-  height: 60%;
+  height: 50%;
 }
 
   .top_bar {
@@ -89,6 +93,8 @@
     top: 0;
     left: 0;
     width: 100%;
+    height: 4%;
+    min-height: 30px;
     font-size: 1.5em;
     padding: 0.5% 0 0.8% 0;
     text-align: center;
