--- a/app/views/checkins/_form.html.haml
+++ b/app/views/checkins/_form.html.haml
@@ -45,8 +45,8 @@
 
           .field
             = f.fields_for :categories do |category|
-              = category.label :name
-              = category.text_field :name
+              = category.text_field :name, placeholder: ' Name'
+              = category.select :color, [['Coral','coral'],['Crimson','crimson'],['Green','green'],['Mustard','mustard'],['Pink','pink'],['Purple','purple'],['Red','red']]
               = category.link_to_remove image_tag default_x
             = f.link_to_add "New Category", :categories
 
