EHXE to dash not navbar

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,8 +18,10 @@
 
       .content
         .top_bar
+          = link_to 'EHXE',  checkins_path
           = image_tag 'http://www.acceleratedtaxsolutions.com/sites/default/themes/ats/images/menu-icon.png', class: 'menu_icon'
-          EXHE
+
+
         = yield
 
 
