fixes map on checkin page and width styling

--- a/app/assets/stylesheets/new_checkin_form.css.scss
+++ b/app/assets/stylesheets/new_checkin_form.css.scss
@@ -8,6 +8,13 @@
   width: 50%;
 }
 
+.edit_checkin {
+  width: 50%;
+  margin: 0 auto;
+  height: 100%;
+  text-align: center;
+}
+
 .new_checkin,
 .past_checkin {
   width: 100%;
