--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -89,7 +89,7 @@
     text-shadow: rgb(34, 34, 34) 0px -1px 2px;
     width: 225px;
     zoom: 1;
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
     width: 100%;
@@ -108,7 +108,7 @@
   }
 
   .content {
-    padding-top: 50px;
+    // padding-top: 50px;
     position: absolute;
     left: 0;
     width: 100%;
