--- a/app/assets/stylesheets/show_checkin.css.scss
+++ b/app/assets/stylesheets/show_checkin.css.scss
@@ -2,24 +2,34 @@
   margin: auto;
   text-align: center;
   width: 900px;
+  height: 50%;
   // float: left;
 }
 
-.show_checkin_map, .asset_div, .show_checkin_people_div, .show_checkin_categories_div {
+.assets_container {
+  height: 100%;
+}
+
+.asset_div, .show_checkin_people_div, .show_checkin_categories_div {
   width: 50%;
-  margin-top: 30px;
   float: left;
-  min-height: 250px;
+  height: 100%;
   margin: auto;
+  text-align: center;
 }
 
 .asset_div, video, audio {
   max-height: 250px;
 }
 
+.words_div {
+  width: 50%;
+  height: 100%;
+}
 
 .show_checkin_map {
   text-align: center;
+  height: 75%;
 }
 
 #audio_tag_show_page {
