Updated Ehxe js object & fixed past checkin map bug

--- a/app/views/checkins/past.haml
+++ b/app/views/checkins/past.haml
@@ -5,7 +5,7 @@
   %input{type:'text',id:'location',placeholder:'Location',class: 'past_checkin_location_search'}
 
   .past_checkin_form
-    -# = render 'form'
+    = render 'form'
 
 
 
