--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -3,6 +3,15 @@
   width: 100%;
 }
 
+.checkin_title {
+  color: black;
+  font-size: 1.5em;
+  width: 100%;
+  height: 100%;
+  background: rgb(230, 228, 228);
+  box-shadow: 4px 4px 4px 1px rgba(64,61,64,1);
+}
+
 .container {
   width: 100%;
   height: 100%;
