--- a/app/views/checkins/_form.html.haml
+++ b/app/views/checkins/_form.html.haml
@@ -1,5 +1,5 @@
 .checkin_form
-  -if params[:action] == 'new'
+  -if params[:action] == 'new' || params[:action] == 'past'
     = nested_form_for @checkin do |f|
       = render 'partials/errors', resource: @checkin
 
