media queries on dash

--- a/app/assets/stylesheets/timeline.css.scss
+++ b/app/assets/stylesheets/timeline.css.scss
@@ -18,6 +18,12 @@
 .jpage_image {
   margin: 5px;
   width: 95%;
+  height: 85%;
+}
+
+.jpage_category_bar {
+  width: 95%;
+  height: 15%;
 }
 
 .buttons {
