--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -54,6 +54,7 @@
   height: 30px;
   // height: 100%;
   border: none;
+  border-radius: 0;
   text-align: center;
   padding: 0;
   margin: 0 1%;
@@ -76,10 +77,8 @@
     background-image: -webkit-linear-gradient(top, rgb(62, 62, 62), rgb(56, 56, 56));
     background-origin: padding-box;
     background-size: auto;
-    border-bottom: 2px;
     border-bottom-color: rgb(72, 72, 72);
     border-bottom-style: solid;
-    border-bottom-width: 1px;
     color: rgb(247, 247, 247);
     cursor: auto;
     display: block;
@@ -96,7 +95,8 @@
     height: 4%;
     min-height: 30px;
     font-size: 1.5em;
-    padding: 0.5% 0 0.8% 0;
+    // padding: 0.5% 0 0.8% 0;
+    border: 0;
     text-align: center;
 
     .menu_icon {
@@ -124,5 +124,20 @@
     border-radius: 5px;
     margin: 0 auto;
   }
+}
 
+
+
+// MEDIA QUERIES
+
+@media (min-width: 700px) {
+   .select_search_div {
+    width: 50%;
+  }
+
+  .search_input_div {
+    width: 50%;
+    float: left;
+    margin-top: 4px;
+  }
 }
