--- a/app/views/checkins/_form.html.haml
+++ b/app/views/checkins/_form.html.haml
@@ -43,7 +43,7 @@
                 = category.text_field :name, placeholder: ' Name'
                 = category.select :color, Category.colors
                 = category.link_to_remove image_tag default_x
-              = f.link_to_add "New Category", :categories
+              = f.link_to_add "New Category", :categories, id: "add_categories"
 
 
         .assets.checkin_form_box
@@ -68,7 +68,7 @@
                 = person.label :name
                 = person.text_field :name
                 = person.link_to_remove image_tag default_x
-              = f.link_to_add "New Person", :people
+              = f.link_to_add "New Person", :people, id: "add_people"
 
         .actions
           = f.submit 'CHECKIN', class: 'submit_button'
