--- a/app/views/categories/edit.html.haml
+++ b/app/views/categories/edit.html.haml
@@ -1,7 +1,10 @@
-%h1 Editing category
+.edit_category
 
-= render 'form'
+  .title
+    Editing category
 
-= link_to 'Show', @category
-\|
-= link_to 'Back', categories_path
+  = render 'form'
+
+  .options
+    = link_to 'Show', @category, class:'button'
+    = link_to 'Back', categories_path, class:'button'
