--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,7 @@
     %title YourWorld
     = stylesheet_link_tag    "application", :media => "all"
     %link{:href => "http://fonts.googleapis.com/css?family=Droid+Sans", :rel => "stylesheet", :type => "text/css"}
+    %link{rel:'stylesheet',href:'http://cdnjs.cloudflare.com/ajax/libs/normalize/2.1.0/normalize.css'}
     %link{rel:"stylesheet",href:"http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css"}
     %script{src:"http://code.jquery.com/jquery-1.9.1.js"}
     %script{src: "https://maps.googleapis.com/maps/api/js?key=#{ENV['GOOGLE2']}&sensor=false", type: "text/javascript"}
