fixing words box

--- a/app/assets/stylesheets/new_checkin_form.css.scss
+++ b/app/assets/stylesheets/new_checkin_form.css.scss
@@ -106,6 +106,14 @@
   overflow: scroll;
 }
 
+.words_content {
+  display: block;
+}
+
+#remove_words {
+  display: none;
+}
+
 .file_fields {
 padding-top: 10px;
 }
