--- a/app/views/checkins/_form.html.haml
+++ b/app/views/checkins/_form.html.haml
@@ -26,8 +26,9 @@
               = f.fields_for :assets do |asset|
                 = asset.text_area :words
                 = asset.file_field :media, style:'display:none' #DO NOT DELETE OR FILE UPLOAD WILL NOT WORK
-                = asset.link_to_remove "Remove Words"
+                = asset.link_to_remove "Remove Words", id: "remove_words"
               = f.link_to_add "Add Words", :assets, id: "add_words_link"
+              .remove Remove
 
         .categories.checkin_form_box
           .category_overlay
