--- a/app/assets/stylesheets/timeline.css.scss
+++ b/app/assets/stylesheets/timeline.css.scss
@@ -1,5 +1,5 @@
 .timelinecontainer {
-  height: 20%;
+  // height: 20%;
   width: 100%;
   position: absolute;
   // bottom: 50;
@@ -13,7 +13,7 @@
   // margin: 10px;
   // height: 200px;
   // width: 175px;
-  height: 100%;
+  // height: 100%;
 }
 
 .jpage_image {
@@ -24,7 +24,7 @@
 
 .jpage_category_bar {
   width: 95%;
-  height: 15%;
+  height: 10px;
   margin: 0 5px 0 5px;
 }
 
@@ -40,10 +40,10 @@
     margin: auto;
 }
 
-// TIMELINE HOLDER
+// TIMELINE  NAVBAR HOLDER
 .holder {
   bottom: 0;
-  height: 200px;
+  // height: 200px;
   display: inline;
   width: 100%;
   // position: relative;
@@ -85,21 +85,21 @@
 
 .timeline_holder {
   margin: auto;
-  height: 100%;
+  // height: 100%;
 }
 
 #itemContainer {
   margin: 0;
   padding: 0;
-  height: 100%;
+  // height: 100%;
 }
 
 li a {
-  height: 100%;
+  // height: 100%;
 }
 
 .checkin_title {
-  height: 100%;
+  // height: 100%;
 }
 
 // li:first-child {
