--- a/app/assets/stylesheets/categories/edit.scss
+++ b/app/assets/stylesheets/categories/edit.scss
@@ -1,4 +1,5 @@
-.edit_category {
+.edit_category,
+.new_category {
   width: 50%;
   margin: 0 auto;
 
@@ -16,16 +17,83 @@
   form {
     width: 100%;
     text-align: center;
+
+    #category_name {
+      width: 99%;
+      height: 35px;
+      border: none;
+      text-align: center;
+      border-radius: 3px;
+      font-size: 1.6em;
+    }
+
+    #category_color {
+      width: 100%;
+    }
+
+    .styled-select {
+      background: url(http://kima.co.in/wp-content/uploads/2013/04/drop_down_arrow.png) no-repeat right #9E9898;
+      background-position-x: 99%;
+      margin-right: 0;
+      float: left;
+      width: 92.5%;
+
+      select {
+        background: transparent;
+        padding: 5px;
+        font-size: 16px;
+        line-height: 1;
+        border: 0;
+        border-radius: 3px;
+        height: 34px;
+        -webkit-appearance: none;
+      }
+
+      .marker {
+        float: right;
+        width: 5%;
+      }
+    }
+
+    input[type="submit"] {
+      width: 100%;
+      background: #C95858;
+      border: none;
+      color: white;
+      font-weight: 800;
+      font-size: 1.3em;
+      border-radius: 3px;
+    }
+    .field:nth-child(3) {
+      padding-top: 0;
+    }
   }
 
   .options {
+    height: 100px;
     text-align: center;
-    padding-top: 3%;
-    .button {
-      height: 45px;
-      width: 75px;
-      border-radius: 10px;
-      background: #ccc;
+    padding-top: 2%;
+
+    .button:first-child{
+      margin-right: 3px;
     }
   }
+}
+
+.edit_category .button {
+  height: 30px;
+  width: 49.6%;
+  padding-top: 11px;
+  border-radius: 3px;
+  background: #5BBD96;
+  float: left;
+}
+
+.new_category .button {
+  height: 30px;
+  width: 49.6%;
+  padding-top: 11px;
+  border-radius: 3px;
+  background: #5BBD96;
+  margin: 0;
 }
