--- a/app/views/categories/_form.html.haml
+++ b/app/views/categories/_form.html.haml
@@ -2,9 +2,12 @@
   = render 'partials/errors', resource: @category
 
   .field
-    = f.text_field :name, placeholder: ' Name'
+    = f.text_field :name, placeholder: 'Name'
   .field
-    = f.select :color, Category.colors
+    .styled-select
+      = f.select :color, Category.colors
+    .marker
+      = image_tag "https://s3-eu-west-1.amazonaws.com/ehxe/markers/#{@category.color}_marker.png",id:'marker'
 
   .actions
     = f.submit 'Save'
