--- a/app/views/categories/new.html.haml
+++ b/app/views/categories/new.html.haml
@@ -1,5 +1,9 @@
-%h1 New category
+.new_category
+  .title
+    New Category
 
-= render 'form'
+  = render 'form'
 
-= link_to 'Back', categories_path
+  .options
+    .button
+      = link_to 'Back', categories_path
