--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -1,12 +1,8 @@
 %ul
   - if current_user
     %li= link_to 'Dash', checkins_path
-    %li{class: 'show_checkin_options'}
-      %a{href:''} Checkin
-    %li{class: 'checkin_link'}
-      = link_to 'Now', new_checkin_path
-    %li{class: 'checkin_link'}
-      = link_to 'Past', past_checkin_path
+    %li= link_to 'New Ehxe', new_checkin_path
+    %li= link_to 'Past Ehxe', past_checkin_path
     %li= link_to 'Categories', categories_path
     %li= link_to 'People', people_path
     %li= link_to 'Account', edit_user_path(current_user)
