--- a/app/views/checkins/_form.html.haml
+++ b/app/views/checkins/_form.html.haml
@@ -29,7 +29,8 @@
               = asset.text_area :words
               = asset.file_field :media, style:'display:none' #DO NOT DELETE OR FILE UPLOAD WILL NOT WORK
               = asset.link_to_remove "Remove Words"
-            = f.link_to_add "Add Words", :assets, id: "add_words_link"
+            -if params[:action] == 'new' || params[:action] == 'past'
+              = f.link_to_add "Add Words", :assets, id: "add_words_link"
 
       .categories.checkin_form_box
         -if params[:action] == 'new' || params[:action] == 'past'
