--- a/app/views/checkins/_form.html.haml
+++ b/app/views/checkins/_form.html.haml
@@ -1,79 +1,63 @@
-.checkin_form
-  = nested_form_for @checkin do |f|
-    = render 'partials/errors', resource: @checkin
+= nested_form_for @checkin do |f|
+  = render 'partials/errors', resource: @checkin
 
-    .title_field
-      = f.text_field :title, placeholder: ' Title', required: true
+  .title_field
+    = f.text_field :title, placeholder: ' Title', required: true
 
-    .map
-      - if params[:action] === 'new'
-        #map
-      - elsif params[:action] === 'past'
-        #past_map
-      - elsif request.env['REQUEST_PATH'] === "/checkins/#{@checkin.id}/edit"
-        #edit_map{data: { id: @checkin.id } }
+  - if params[:action] === 'new'
+    #map
+  - elsif params[:action] === 'past'
+    #past_map
+  - elsif params[:action] === 'edit'
+    #edit_map{data: { id: @checkin.id } }
 
-      = f.hidden_field :latitude
-      = f.hidden_field :longitude
-      - default_x = "https://s3-eu-west-1.amazonaws.com/ehxe/defaults/x_icon.png"
+  = f.hidden_field :latitude
+  = f.hidden_field :longitude
+  - default_x = "https://s3-eu-west-1.amazonaws.com/ehxe/defaults/x_icon.png"
 
-    #checkin_inventory
-      .words.checkin_form_box
-        -if params[:action] == 'new' || params[:action] == 'past'
-          .words_overlay
-            = image_tag "https://s3-eu-west-1.amazonaws.com/ehxe/defaults/words.png",  id: 'words_image'
-            %p.instructions Words
-        .words_content
+  #checkin_inventory
+    .checkin_form_box.words
+      -if params[:action] == 'new' || params[:action] == 'past'
+        .words_overlay
+          = image_tag "https://s3-eu-west-1.amazonaws.com/ehxe/defaults/words.png",  id: 'words_image'
+          %p.instructions Words
+      .words_content
+        .field
+          = f.fields_for :assets do |asset|
+            = asset.text_area :words, id:'text_area'
+            = asset.file_field :media, style:'display:none' #DO NOT DELETE OR FILE UPLOAD WILL NOT WORK
+            = asset.link_to_remove "Remove Words"
+          -if params[:action] == 'new' || params[:action] == 'past'
+            = f.link_to_add "Add Words", :assets, id: "add_words_link"
+
+    .checkin_form_box.categories
+      -if params[:action] == 'new' || params[:action] == 'past'
+        .category_overlay
+          = image_tag "https://s3-eu-west-1.amazonaws.com/ehxe/defaults/Categories.png", id: 'category_image'
+          %p.instructions Categories
+      .category_content
+        - if !current_user.categories.empty?
           .field
-            = f.fields_for :assets do |asset|
-              = asset.text_area :words
-              = asset.file_field :media, style:'display:none' #DO NOT DELETE OR FILE UPLOAD WILL NOT WORK
-              = asset.link_to_remove "Remove Words"
-            -if params[:action] == 'new' || params[:action] == 'past'
-              = f.link_to_add "Add Words", :assets, id: "add_words_link"
+            = f.select :category_ids, @categories, {prompt: false}, multiple: true
 
-      .categories.checkin_form_box
-        -if params[:action] == 'new' || params[:action] == 'past'
-          .category_overlay
-            = image_tag "https://s3-eu-west-1.amazonaws.com/ehxe/defaults/Categories.png", id: 'category_image'
-            %p.instructions Categories
-        .category_content
-          - if !current_user.categories.empty?
-            .field
-              = f.select :category_ids, @categories, {prompt: false}, multiple: true
-
-          .field
-            = f.fields_for :categories do |category|
-              = category.text_field :name, placeholder: ' Name'
-              = category.select :color, Category.colors
-              = category.link_to_remove image_tag default_x
-            = f.link_to_add "New Category", :categories, id: "add_categories"
-
-
-      .assets.checkin_form_box
-        .add_media_overlay
-          = image_tag "https://s3-eu-west-1.amazonaws.com/ehxe/defaults/assets_image_small2.png", id: "assets_image"
-          %p.instructions Media
-        .add_media
-          .div_for_asset__upload_appends
+    .checkin_form_box.assets
+      .add_media_overlay
+        = image_tag "https://s3-eu-west-1.amazonaws.com/ehxe/defaults/assets_image_small2.png", id: "assets_image"
+        %p.instructions Media
+      .add_media
+        .div_for_asset__upload_appends
+        .plus_button
           %img#add_media{src:'http://iconizer.net/files/Wireframe_mono_icons/orig/sq_plus.png'}
 
 
-      .people.checkin_form_box
-        .people_overlay
-          = image_tag "https://s3-eu-west-1.amazonaws.com/ehxe/defaults/People.png",  id: 'people_image'
-          %p.instructions People
-        .people_content
-          - if !current_user.people.empty?
-            .field
-              = f.select :person_ids, @people, {prompt: false}, multiple: true
-
+    .checkin_form_box.people
+      .people_overlay
+        = image_tag "https://s3-eu-west-1.amazonaws.com/ehxe/defaults/People.png",  id: 'people_image'
+        %p.instructions People
+      .people_content
+        - if !current_user.people.empty?
           .field
-            = f.fields_for :people do |person|
-              = person.label :name
-              = person.text_field :name
-              = person.link_to_remove image_tag default_x
-            = f.link_to_add "New Person", :people, id: "add_people"
+            = f.select :person_ids, @people, {prompt: false}, multiple: true
 
-      .actions
-        = f.submit 'CHECKIN', class: 'submit_button'
+    .actions
+      = f.submit 'CHECKIN', class: 'submit_button'
