adding EHXE logo name in nav bar and trying out black background

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,10 @@
 
 @import url(http://reset5.googlecode.com/hg/reset.min.css);
 
+body {
+  background-color: #000;
+}
+
  .logo {
   width: 100%;
   text-align: center;
@@ -23,6 +27,10 @@
   max-height: 200px;
   margin: 0 auto;
   margin-top: -20px;
+ }
+
+ #logo_name {
+  width: 5%;
  }
 
 html, body {
