--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -133,7 +133,8 @@
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-image: url('https://s3-eu-west-1.amazonaws.com/ehxe/sandpaper.png');
+    // background-image: url('https://s3-eu-west-1.amazonaws.com/ehxe/sandpaper.png');
+    background-color: #000;
   }
 
   .errors {
