--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -8,8 +8,8 @@
   font-size: 1.5em;
   width: 100%;
   // height: 100%;
-  background: rgb(230, 228, 228);
-  box-shadow: 4px 4px 4px 1px rgba(64,61,64,1);
+  // background: rgb(230, 228, 228);
+  // box-shadow: 4px 4px 4px 1px rgba(64,61,64,1);
 }
 
 .container {
@@ -29,19 +29,21 @@
 }
 
 .select_search_div {
-  width: 19%;
+  width: 20%;
   float: left;
-  margin-top: 4px;
-  margin-left: 1%;
+  // margin-top: 4px;
+  margin-bottom: 0.75%;
+  // margin-left: 1%;
   text-align: center;
-  background-color: #767E7F;
+  background-color: #383C3D;
   color: white;
 }
 
 .search_input_div {
   width: 80%;
   float: left;
-  margin-top: 4px;
+  // margin-top: 4px;
+  margin-bottom: 0.75%;
 }
 
 #searchCategory {
@@ -58,7 +60,7 @@
 }
 
 #searchQuery {
-  width: 98%;
+  width: 100%;
   font-size: 1.3em;
   height: 30px;
   // height: 100%;
@@ -66,13 +68,13 @@
   border-radius: 0;
   text-align: center;
   padding: 0;
-  margin: 0 1%;
+  // margin: 0 1%;
 }
 
 
 .map_dash {
   width: 100%;
-  height: 50%;
+  height: 100%;
 }
 
   .top_bar {
