--- a/app/assets/stylesheets/timeline.css.scss
+++ b/app/assets/stylesheets/timeline.css.scss
@@ -1,7 +1,15 @@
+.bottom_container {
+  bottom: 0px;
+  position: absolute;
+  width: 100%;
+  height: auto;
+  background-color: rgba(128,128,128,.8);
+}
+
 .timelinecontainer {
   // height: 20%;
   width: 100%;
-  position: absolute;
+  // position: absolute;
   // bottom: 50;
   // overflow: hidden;
   text-align: center;
@@ -42,21 +50,21 @@
 
 // TIMELINE  NAVBAR HOLDER
 .holder {
-  bottom: 0;
-  // height: 200px;
-  display: inline;
-  width: 100%;
-  // position: relative;
-  margin: auto;
+  // bottom: 0;
+  // // height: 200px;
+  // display: inline;
+  // width: 100%;
+  // // position: relative;
+  // margin: auto;
 }
 
 .holder a {
     display:inline-block;
     cursor:pointer;
-    margin:0 5px;
+    margin: 0 8px 2px 8px;
     padding:4px;
     border-radius:50%;
-    background-color:#767E7F;
+    background-color:#222;
 }
 .holder a:hover {
     background-color:#222;
