--- a/app/views/checkins/index.html.haml
+++ b/app/views/checkins/index.html.haml
@@ -1,18 +1,22 @@
 .map_dash
   #map
 
-.search_box
-  .select_search_div
-    %select{name:'category',id:'searchCategory'}
-      %option{value:'location'}= "LOCATION".html_safe
-      %option{value:'people'} PEOPLE
-      %option{value:'category'} CATEGORY
-  .search_input_div
-    %input{type:'text',name:'query',id:'searchQuery',placeholder:"SEARCH"}
+.bottom_container
 
-.timelinecontainer
-  / JPAGES NAV PANEL
-  .holder#centernav
-  / JPAGES ITEM CONTAINER
-  .timeline_holder
-    %ul#itemContainer
+  .timelinecontainer
+    / JPAGES NAV PANEL
+    .holder#centernav
+
+    .search_box
+      .select_search_div
+        %select{name:'category',id:'searchCategory'}
+          %option{value:'location'}= "LOCATION".html_safe
+          %option{value:'people'} PEOPLE
+          %option{value:'category'} CATEGORY
+      .search_input_div
+        %input{type:'text',name:'query',id:'searchQuery',placeholder:"SEARCH"}
+
+
+    / JPAGES ITEM CONTAINER
+    .timeline_holder
+      %ul#itemContainer
