--- a/app/assets/stylesheets/checkins/show.scss
+++ b/app/assets/stylesheets/checkins/show.scss
@@ -3,7 +3,6 @@
   text-align: center;
   width: 85%;
   height: 50%;
-  // float: left;
 }
 
 .assets_container {
@@ -48,6 +47,10 @@
 .show_checkin_map {
   text-align: center;
   height: 75%;
+
+  #map {
+    height: 100%;
+  }
 }
 
 #audio_tag_show_page {
@@ -62,14 +65,6 @@
 #audio_default_image {
   margin: 0 auto;
   display: block;
-}
-
-#map.show {
-  width: 90%;
-  max-height: 200px;
-  margin: 0 auto;
-  display: block;
-  float: none;
 }
 
 #address {
