--- a/app/assets/stylesheets/new_checkin_form.css.scss
+++ b/app/assets/stylesheets/new_checkin_form.css.scss
@@ -4,16 +4,29 @@
   clear: both;
 }
 
-#new_checkin {
-  width: 50%;
-}
-
 .new_checkin,
 .past_checkin {
   width: 100%;
   height: 100%;
   margin: 20px auto;
   text-align: center;
+
+  form#new_checkin,
+  form#past_checkin,
+  form#edit_checkin {
+    width: 50%;
+    height: 89%;
+    input#checkin_title {
+      width: 98.5%;
+      margin-bottom: 3px;
+    }
+    #map {
+      margin: 0 auto 3px;
+    }
+    .actions {
+      margin-top: 3px;
+    }
+  }
 
   .past_checkin_form {
     display: none;
@@ -22,7 +35,7 @@
   .checkin_form_box {
     border: 1px solid black;
     width: 50%;
-    height: 40%;
+    height: 50%;
     float: left;
 
     select[multiple] {
@@ -41,6 +54,9 @@
     }
   }
 
+  #checkin_description {
+    display: none;
+  }
   .new_media {
     width: 100%;
     margin: 5px 0 5px 0;
@@ -84,12 +100,14 @@
 }
 
 .submit_button {
+  margin-top: 3px;
   width: 100%;
-  background: black;
+  background: red;
   color: white;
   font-family: 'Droid Sans';
   font-size: 1.3em;
   border: none;
+  border-radius: 3px;
 }
 
 .category_overlay, .people_overlay, .words_overlay, .add_media_overlay {
@@ -129,6 +147,11 @@
 
 .file_fields {
   padding-top: 10px;
+}
+
+.checkin_form_box {
+  height: 50%;
+  width: 49%;
 }
 
 .people.checkin_form_box, .people_overlay, .people_content {
