--- a/app/assets/stylesheets/checkins/checkin_form.css.scss
+++ b/app/assets/stylesheets/checkins/checkin_form.css.scss
@@ -4,18 +4,17 @@
   clear: both;
 }
 
-.new_checkin,
-.past_checkin {
+.checkin_form {
   width: 100%;
   height: 100%;
   margin: 20px auto;
   text-align: center;
 
-  form#new_checkin,
-  form#past_checkin,
-  form#edit_checkin {
+  form {
     width: 50%;
     height: 89%;
+    margin: 0 auto;
+
     input#checkin_title {
       width: 98.5%;
       margin-bottom: 3px;
@@ -64,15 +63,11 @@
 
   #checkin_title,
   .past_checkin_location_search {
-    width: 100%;
+    width: 50%;
     font-size: 1.3em;
     height: 30px;
-  }
-
-  .past_checkin_location_search {
-    width: 100%;
-    text-align: center;
     border: none;
+    text-align: center;
   }
 
 }
@@ -96,7 +91,7 @@
 #edit_map {
   height: 30%;
   width: 100%;
-  margin: auto;
+  margin: 0 auto 3px;
 }
 
 .submit_button {
